--- a/src/client/components/highlight/index.scss
+++ b/src/client/components/highlight/index.scss
@@ -73,7 +73,12 @@
     @include for-big-notebook-up {
       bottom: 20%;
     }
+
     @include for-notebook {
+      bottom: 5%;
+    }
+
+    @include for-phone-only {
       bottom: 15%;
     }
   }
