--- a/src/client/components/videoPlayer/index.scss
+++ b/src/client/components/videoPlayer/index.scss
@@ -71,6 +71,7 @@
     &-info {
       color: white;
       margin-left: 20px;
+      margin-right: 20px;
 
       h3 {
         margin: 0;
@@ -97,7 +98,6 @@
       &-info {
         color: white;
         margin-left: 10px;
-        width: 85%;
   
         h3 {
           margin: 0;
@@ -105,9 +105,6 @@
         }
 
         p {
-          text-overflow: ellipsis;
-          overflow: hidden;
-          white-space: nowrap;
           font-size: 12px;
         }
       }
